@@ -426,3 +426,4 @@ v0.74.1:
     - Added a command '/townyadmin reset'. Wipes all settings and generate/load a default config.yml.
     - Title and Surnames can now be limited in length by the setting 'max_title_length' in config.yml.
     - Towny is now an observable object.  This allows other plugins to observe events that happen in Towny.
+    - Towny now abbreviates it's residents lists when displayed, for easier reading.
